# dkvs

./: .gitignore  CMakeLists.txt  README.md
src/: client_serdes.cpp  client_serdes.h  command.cpp  command.h  concise_lambda.h  dkvs-main.cpp  dkvs.cpp  dkvs.h  dkvs.proto  fdcloser.cpp  fdcloser.h  follower_serdes.h  hashkv.cpp  hashkv.h  iouring.cpp  iouring.h  kv.h  pb.cpp  pb.h  recap.cpp  recap.h  server_serdes.h  system_error.cpp  system_error.h
